--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ api/data
 api/bird-data.py
 api/__pycache__
 api/queries/__pycache__
+api/data/dictbirdfamily.json
 
 # docker files
 docker-compose.yml
