--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     command: /bin/bash run.sh
     working_dir: /app
     volumes:
-      - ./client/app:/app
+      - ./ghi/app:/app
     ports:
       - "3000:3000"
     environment:
