--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
       REACT_APP_SAMPLE_SERVICE_API_HOST: http://localhost:8000
   db:
     image: postgres:13.3-alpine
+    container_name: db
     volumes:
       - bird-data:/var/lib/postgresql/data
     ports:
