fixed file names, working on docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,11 +14,10 @@ services:
     environment:
       SIGNING_KEY: ${SIGNING_KEY}
       DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db/${POSTGRES_DB}
-      WAIT_HOST: 5432:5432
+      WAIT_HOST: db:5432
       PORT: 8000:8000
     depends_on:
       - db
-
   ghi:
     image: node:latest
     command: /bin/bash run.sh
