--- a/ghi/app/Dockerfile
+++ b/ghi/app/Dockerfile
@@ -1,13 +1,11 @@
-FROM node:16
 
+FROM node:lts-alpine AS build
 WORKDIR /app
-
-COPY package.json package-lock.json ./
-
-RUN npm install
-
 COPY . .
+RUN npm run build
 
-EXPOSE 3000
-
-CMD ["npm", "start"]
+FROM nginx:stable-alpine
+COPY --from=build /app/build /usr/share/nginx/html
+COPY --from=build /app/nginx/nginx.conf /etc/nginx/conf.d/default.conf
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
