base configuration done

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,15 +24,17 @@ services:
       - ./ghi/app:/app
     ports:
       - 80:80
-    environment:
-      NODE_ENV: production
+    depends_on:
+      - api
+    # environment:
+    #   NODE_ENV: production
     # environment:
     #   HOST_OS: ${OS}
       # NODE_ENV: development
       # HOST: "0.0.0.0"
       # PUBLIC_URL: http://localhost:3000
   db:
-    image: postgres:13-alpine
+    image: postgres:13.3-alpine
     container_name: db
     volumes:
       - bird-data:/var/lib/postgresql/data
