--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,10 @@ services:
     build:
       context: ./ghi/app
       dockerfile: Dockerfile
-    # working_dir: /app
+    working_dir: /app
     volumes:
       - ./ghi/app:/app
+      - ./ghi/node_modules:/node_modules
     ports:
       - 80:80
     depends_on:
