--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ volumes:
     # external: true
 services:
   api:
+    platform: linux/amd64
     build: ./api
     ports:
       - 8000:8000
@@ -17,13 +18,14 @@ services:
       db:
         condition: service_healthy
   ghi:
+    platform: linux/amd64
     build:
       context: ./ghi/app
       dockerfile: Dockerfile
     working_dir: /app
     volumes:
       - ./ghi/app:/app
-      - ./ghi/node_modules:/node_modules
+      - ./ghi/app/node_modules:/node_modules
     ports:
       - 80:80
     depends_on:
@@ -31,6 +33,7 @@ services:
   db:
     image: postgres:13.3-alpine
     container_name: db
+    platform: linux/amd64
     volumes:
       - bird-data:/var/lib/postgresql/data
     ports:
