--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -7,7 +7,7 @@ COPY requirements.txt requirements.txt
 RUN python -m pip install -r requirements.txt
 WORKDIR /app
 COPY . .
-CMD /wait && python -m migrations up && /wait && uvicorn main:app --reload --host 0.0.0.0
+CMD /wait && python -m migrations up && /wait && uvicorn main:app --reload --proxy-headers --host 0.0.0.0
 # FROM python:3.10-bullseye
 
 
