--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ volumes:
     # external: true
 services:
   api:
-    platform: linux/amd64
-    build: ./api
+    # platform: linux/amd64
+    build: ./api/app
     ports:
       - 8000:8000
     volumes:
@@ -18,7 +18,7 @@ services:
       db:
         condition: service_healthy
   ghi:
-    platform: linux/amd64
+    # platform: linux/amd64
     build:
       context: ./ghi/app
       dockerfile: Dockerfile
@@ -33,7 +33,7 @@ services:
   db:
     image: postgres:13.3-alpine
     container_name: db
-    platform: linux/amd64
+    # platform: linux/amd64
     volumes:
       - bird-data:/var/lib/postgresql/data
     ports:
