working on deployment

--- a/api/app/Dockerfile.dev
+++ b/api/app/Dockerfile.dev
@@ -7,4 +7,4 @@ COPY requirements.txt requirements.txt
 RUN python -m pip install -r requirements.txt
 WORKDIR /
 COPY . .
-CMD /wait && python -m migrations up && /wait && uvicorn main:app --reload --proxy-headers --host 0.0.0.0
+CMD ["/wait","&&","python","-m","make","migrations","up","&&","/wait", "&&","fastapi", "run", "main:app", "--port", "8000"]
