--- a/api/app/Dockerfile.dev
+++ b/api/app/Dockerfile.dev
@@ -2,9 +2,6 @@ FROM python:3.10-bullseye
 RUN python -m pip install --upgrade pip
 ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.9.0/wait /wait
 RUN chmod +x /wait
-WORKDIR /deps
-COPY requirements.txt requirements.txt
-RUN python -m pip install -r requirements.txt
-WORKDIR /
 COPY . .
-CMD ["/wait","&&","python","-m","make","migrations","up","&&","/wait", "&&","fastapi", "run", "main:app", "--port", "8000"]
+RUN python -m pip install -r requirements.txt
+CMD /wait && python -m migrations up && /wait && uvicorn main:app --reload --proxy-headers --host 0.0.0.0
