--- a/compose.yaml
+++ b/compose.yaml
@@ -3,30 +3,37 @@ volumes:
     # external: true
 services:
   api:
-    # platform: linux/amd64
-    build: ./api/app
+    container_name: api
+    # image: madfoley/birdinglogs-api
+    platform: linux/amd64
+    build:
+      context: ./api/app
+      dockerfile: Dockerfile
     ports:
       - 8000:8000
     volumes:
       - ./api/app:/app
+    # hostname: ${IPV4}
     environment:
       VERSION: prod
       SIGNING_KEY: ${SIGNING_KEY}
       DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db/${POSTGRES_DB}
-      WAIT_HOST: db:5432
-      PORT: 8000:8000
+      PORT: 8000
     depends_on:
       db:
         condition: service_healthy
   ghi:
-    # platform: linux/amd64
+    container_name: ghi
+    # image: madfoley/birdinglogs-ghi
     build:
       context: ./ghi/app
       dockerfile: Dockerfile
+    platform: linux/amd64
     working_dir: /app
     volumes:
       - ./ghi/app:/app
       - ./ghi/app/node_modules:/node_modules
+    # hostname: ${IPV4}
     ports:
       - 80:80
     depends_on:
@@ -34,7 +41,7 @@ services:
   db:
     image: postgres:13.3-alpine
     container_name: db
-    # platform: linux/amd64
+    platform: linux/amd64
     volumes:
       - bird-data:/var/lib/postgresql/data
     ports:
