--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -4,9 +4,7 @@ volumes:
 services:
   api:
     container_name: api
-    build:
-      context: ./api/app
-      dockerfile: Dockerfile.dev
+    build: ./api/app
     ports:
       - 8000:8000
     volumes:
@@ -15,7 +13,7 @@ services:
       VERSION: dev
       SIGNING_KEY: ${SIGNING_KEY}
       DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db/${POSTGRES_DB}
-      WAIT_HOST: 5432:5432
+      WAIT_HOST: db:5432
       PORT: 8000:8000
     depends_on:
       db:
