--- a/api/app/Dockerfile.dev
+++ b/api/app/Dockerfile.dev
@@ -1,7 +1,8 @@
-FROM python:3.10-bullseye
+FROM python:3.10
 RUN python -m pip install --upgrade pip
 ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.9.0/wait /wait
 RUN chmod +x /wait
 COPY . .
 RUN python -m pip install -r requirements.txt
+EXPOSE 8000
 CMD /wait && python -m migrations up && /wait && uvicorn main:app --reload --proxy-headers --host 0.0.0.0
