--- a/api/app/Dockerfile
+++ b/api/app/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.10
+WORKDIR /
 RUN python -m pip install --upgrade pip
-WORKDIR /app
-COPY requirements.txt requirements.txt
-RUN python -m pip install -r requirements.txt
-EXPOSE 8000
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+COPY requirements.txt .
+RUN python -m pip install --no-cache-dir -r requirements.txt
+COPY . .
+CMD ["uvicorn", "main:app","--reload", "--host", "0.0.0.0", "--port", "8000"]
