--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,7 @@
 # use to run images in production container
 volumes:
   bird-data:
-    # external: true
+    external: true
 services:
   api:
     container_name: api
