--- a/api/app/Dockerfile
+++ b/api/app/Dockerfile
@@ -1,7 +1,7 @@
-FROM python:3.10
+FROM python:3.10-slim
 WORKDIR /
 RUN python -m pip install --upgrade pip
 COPY requirements.txt .
 RUN python -m pip install --no-cache-dir -r requirements.txt
 COPY . .
-CMD ["uvicorn", "main:app","--reload", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
