--- a/ghi/app/Dockerfile
+++ b/ghi/app/Dockerfile
@@ -1,12 +1,12 @@
-
-FROM node:lts-alpine AS build
+FROM node:22-alpine AS builder
 WORKDIR /app
-COPY . .
+COPY package*.json ./
 RUN npm install
+COPY . .
 RUN npm run build
 
-FROM nginx:stable-alpine
-COPY --from=build /app/build /usr/share/nginx/html
-COPY --from=build /app/nginx/nginx.conf /etc/nginx/conf.d/default.conf
+FROM nginx:latest AS production
+COPY --from=builder /app/build /usr/share/nginx/html
+COPY /nginx/nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
