--- a/ghi/app/nginx/nginx.conf
+++ b/ghi/app/nginx/nginx.conf
@@ -1,17 +1,21 @@
 server {
     listen 80;
+    listen [::]:80;
     server_name birdinglogs.com www.birdinglogs.com;
+
+    root /usr/share/nginx/html;
+    index index.html;
+
     location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
-        try_files $uri $uri/ /index.html;
+        try_files $uri /index.html;
     }
-        location /api/ {
-        proxy_pass http://localhost:8000/;
+
+    location /api/ {
+        proxy_pass http://api:8000;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
